--- a/Bazis MADI/Teacher.storyboard
+++ b/Bazis MADI/Teacher.storyboard
@@ -86,7 +86,7 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tlV-ha-JKZ" customClass="Title7LabelUILabel" customModule="МАДИ" customModuleProvider="target">
-                                            <rect key="frame" x="11" y="59" width="41.666666666666664" height="21"/>
+                                            <rect key="frame" x="11" y="59" width="42" height="21"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
@@ -2047,18 +2047,43 @@
                                     </tableViewCell>
                                 </cells>
                             </tableViewSection>
-                            <tableViewSection headerTitle="Действие над файлом" id="16g-Go-E3q">
+                            <tableViewSection headerTitle="Рецензия" id="16g-Go-E3q">
                                 <cells>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" rowHeight="74" id="Yya-Uj-pWQ">
-                                        <rect key="frame" x="0.0" y="349" width="414" height="74"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" rowHeight="69" id="Yya-Uj-pWQ">
+                                        <rect key="frame" x="0.0" y="349" width="414" height="69"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Yya-Uj-pWQ" id="rbv-WP-5Nc">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="74"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="69"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Рецензия отсутствует" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1TV-2n-gcf" customClass="Title7LabelUILabel" customModule="МАДИ" customModuleProvider="target">
+                                                    <rect key="frame" x="20" y="11" width="175" height="47"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="m1v-E6-01z" customClass="AddDellUIButton" customModule="МАДИ" customModuleProvider="target">
+                                                    <rect key="frame" x="235" y="11" width="159" height="47"/>
+                                                    <state key="normal" title="Добавить"/>
+                                                    <connections>
+                                                        <action selector="addDellButtonPress:" destination="4LM-UB-gmD" eventType="touchUpInside" id="9Yi-mC-cd3"/>
+                                                    </connections>
+                                                </button>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="1TV-2n-gcf" firstAttribute="leading" secondItem="rbv-WP-5Nc" secondAttribute="leading" constant="20" id="3Td-j3-CGa"/>
+                                                <constraint firstAttribute="trailing" secondItem="m1v-E6-01z" secondAttribute="trailing" constant="20" id="6fF-ZL-Uoy"/>
+                                                <constraint firstItem="m1v-E6-01z" firstAttribute="width" secondItem="rbv-WP-5Nc" secondAttribute="width" multiplier="0.384058" id="6k1-ax-HDP"/>
+                                                <constraint firstItem="1TV-2n-gcf" firstAttribute="top" secondItem="rbv-WP-5Nc" secondAttribute="top" constant="11" id="B6z-UX-nPJ"/>
+                                                <constraint firstAttribute="bottom" secondItem="1TV-2n-gcf" secondAttribute="bottom" constant="11" id="DhB-Px-nIo"/>
+                                                <constraint firstItem="1TV-2n-gcf" firstAttribute="width" secondItem="rbv-WP-5Nc" secondAttribute="width" multiplier="0.422705" id="Xlm-Yh-KCQ"/>
+                                                <constraint firstItem="m1v-E6-01z" firstAttribute="top" secondItem="rbv-WP-5Nc" secondAttribute="top" constant="11" id="a8t-Ud-Ccn"/>
+                                                <constraint firstAttribute="bottom" secondItem="m1v-E6-01z" secondAttribute="bottom" constant="11" id="xUz-Dm-lKE"/>
+                                            </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" rowHeight="74" id="NoR-Zr-EYm">
-                                        <rect key="frame" x="0.0" y="423" width="414" height="74"/>
+                                        <rect key="frame" x="0.0" y="418" width="414" height="74"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="NoR-Zr-EYm" id="9Lr-fW-ysc">
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="74"/>
@@ -2066,22 +2091,14 @@
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" rowHeight="74" id="w6e-fO-2vc">
-                                        <rect key="frame" x="0.0" y="497" width="414" height="74"/>
+                                        <rect key="frame" x="0.0" y="492" width="414" height="74"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="w6e-fO-2vc" id="lGL-96-ckK">
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="74"/>
                                             <autoresizingMask key="autoresizingMask"/>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" rowHeight="63" id="Rnb-6z-Hxq">
-                                        <rect key="frame" x="0.0" y="571" width="414" height="63"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Rnb-6z-Hxq" id="c7D-Ef-1Pc">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="63"/>
-                                            <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="C0p-76-zif" customClass="InputButton1UIButton" customModule="МАДИ" customModuleProvider="target">
-                                                    <rect key="frame" x="104" y="11" width="203" height="41"/>
+                                                    <rect key="frame" x="106" y="17" width="203" height="41"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <state key="normal" title="Отмена"/>
                                                     <connections>
@@ -2089,14 +2106,6 @@
                                                     </connections>
                                                 </button>
                                             </subviews>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" rowHeight="63" id="3Ti-t6-OVK">
-                                        <rect key="frame" x="0.0" y="634" width="414" height="63"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="3Ti-t6-OVK" id="dLi-H3-KNk">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="63"/>
-                                            <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                 </cells>
@@ -2114,12 +2123,14 @@
                         <outlet property="fileImage" destination="QCs-BZ-Sg6" id="xV8-9E-JCg"/>
                         <outlet property="fileNameLabel" destination="lhG-LJ-bFi" id="T5U-Ad-e0Y"/>
                         <outlet property="loadFileButton" destination="9Rv-6I-vma" id="cGD-9Q-BO6"/>
+                        <outlet property="reviewAddDellButton" destination="m1v-E6-01z" id="XN2-FI-ctj"/>
+                        <outlet property="reviewLabel" destination="1TV-2n-gcf" id="rhg-Ut-j4j"/>
                         <outlet property="textField" destination="Rba-Am-iv5" id="pLW-xw-YUg"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bq1-gF-YSg" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="6033" y="-704"/>
+            <point key="canvasLocation" x="6031.884057971015" y="-704.46428571428567"/>
         </scene>
     </scenes>
     <resources>
