--- a/Bazis MADI/Teacher.storyboard
+++ b/Bazis MADI/Teacher.storyboard
@@ -1217,7 +1217,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FFN-gN-Lgv" customClass="CancelButtonUIButton" customModule="МАДИ" customModuleProvider="target">
-                                                    <rect key="frame" x="105" y="19" width="203" height="41"/>
+                                                    <rect key="frame" x="95" y="17" width="224" height="45"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <state key="normal" title="Удалить"/>
                                                     <connections>
@@ -1235,7 +1235,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="o3l-Pe-5oj" customClass="DoneButtonUIButton" customModule="МАДИ" customModuleProvider="target">
-                                                    <rect key="frame" x="95" y="14" width="224" height="41"/>
+                                                    <rect key="frame" x="95" y="17" width="224" height="45"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <state key="normal" title="Сохранить"/>
                                                     <connections>
@@ -1253,7 +1253,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qme-1H-LFD" customClass="InputButton1UIButton" customModule="МАДИ" customModuleProvider="target">
-                                                    <rect key="frame" x="104" y="11" width="203" height="41"/>
+                                                    <rect key="frame" x="107" y="11" width="200" height="45"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <state key="normal" title="Отмена"/>
                                                     <connections>
@@ -2056,30 +2056,14 @@
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="69"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Рецензия отсутствует" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1TV-2n-gcf" customClass="Title5LabelUILabel" customModule="МАДИ" customModuleProvider="target">
-                                                    <rect key="frame" x="20" y="11" width="175" height="47"/>
+                                                <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Рецензия отсутствует" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1TV-2n-gcf" customClass="Title5LabelUILabel" customModule="МАДИ" customModuleProvider="target">
+                                                    <rect key="frame" x="91" y="11" width="232" height="47"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="m1v-E6-01z" customClass="AddDellUIButton" customModule="МАДИ" customModuleProvider="target">
-                                                    <rect key="frame" x="235" y="11" width="159" height="47"/>
-                                                    <state key="normal" title="Добавить"/>
-                                                    <connections>
-                                                        <action selector="addDellButtonPress:" destination="4LM-UB-gmD" eventType="touchUpInside" id="9Yi-mC-cd3"/>
-                                                    </connections>
-                                                </button>
                                             </subviews>
-                                            <constraints>
-                                                <constraint firstItem="1TV-2n-gcf" firstAttribute="leading" secondItem="rbv-WP-5Nc" secondAttribute="leading" constant="20" id="3Td-j3-CGa"/>
-                                                <constraint firstAttribute="trailing" secondItem="m1v-E6-01z" secondAttribute="trailing" constant="20" id="6fF-ZL-Uoy"/>
-                                                <constraint firstItem="m1v-E6-01z" firstAttribute="width" secondItem="rbv-WP-5Nc" secondAttribute="width" multiplier="0.384058" id="6k1-ax-HDP"/>
-                                                <constraint firstItem="1TV-2n-gcf" firstAttribute="top" secondItem="rbv-WP-5Nc" secondAttribute="top" constant="11" id="B6z-UX-nPJ"/>
-                                                <constraint firstAttribute="bottom" secondItem="1TV-2n-gcf" secondAttribute="bottom" constant="11" id="DhB-Px-nIo"/>
-                                                <constraint firstItem="1TV-2n-gcf" firstAttribute="width" secondItem="rbv-WP-5Nc" secondAttribute="width" multiplier="0.422705" id="Xlm-Yh-KCQ"/>
-                                                <constraint firstItem="m1v-E6-01z" firstAttribute="top" secondItem="rbv-WP-5Nc" secondAttribute="top" constant="11" id="a8t-Ud-Ccn"/>
-                                                <constraint firstAttribute="bottom" secondItem="m1v-E6-01z" secondAttribute="bottom" constant="11" id="xUz-Dm-lKE"/>
-                                            </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" rowHeight="74" id="NoR-Zr-EYm">
@@ -2088,6 +2072,16 @@
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="NoR-Zr-EYm" id="9Lr-fW-ysc">
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="74"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="m1v-E6-01z" customClass="AddDellUIButton" customModule="МАДИ" customModuleProvider="target">
+                                                    <rect key="frame" x="95" y="17" width="224" height="45"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <state key="normal" title="Добавить"/>
+                                                    <connections>
+                                                        <action selector="addDellButtonPress:" destination="4LM-UB-gmD" eventType="touchUpInside" id="9Yi-mC-cd3"/>
+                                                    </connections>
+                                                </button>
+                                            </subviews>
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" rowHeight="74" id="w6e-fO-2vc">
@@ -2098,7 +2092,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="C0p-76-zif" customClass="InputButton1UIButton" customModule="МАДИ" customModuleProvider="target">
-                                                    <rect key="frame" x="106" y="17" width="203" height="41"/>
+                                                    <rect key="frame" x="107" y="17" width="200" height="45"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <state key="normal" title="Отмена"/>
                                                     <connections>
@@ -2340,8 +2334,8 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="usC-Zq-nvp" customClass="SelectionUIView" customModule="МАДИ" customModuleProvider="target">
-                                                    <rect key="frame" x="15" y="18" width="20" height="20"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <rect key="frame" x="369" y="47" width="25" height="25"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
                                                     <color key="backgroundColor" systemColor="systemGreenColor" red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 </view>
                                             </subviews>
