фикс выбора файла - рецензии

--- a/Bazis MADI/Teacher.storyboard
+++ b/Bazis MADI/Teacher.storyboard
@@ -2368,6 +2368,14 @@
                                             </subviews>
                                         </tableViewCellContentView>
                                     </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="buffCell" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="buffCell" rowHeight="697" id="End-Ex-OW1" userLabel="buffCell">
+                                        <rect key="frame" x="0.0" y="382" width="414" height="697"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="End-Ex-OW1" id="qUW-89-90Z">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="697"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
                                 </prototypes>
                                 <connections>
                                     <outlet property="dataSource" destination="0Zn-yb-8s3" id="ZC5-48-yLy"/>
